# MLDictionaryGUI

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  webscrappy.py  webscrapy.py
glade/: interface.glade
webscrapy/: __init__.py  dictionary.py  pronunciation.py
